--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'io.netty', name: 'netty-all', version: '4.1.22.Final'
+    compile group: 'org.json', name: 'json', version: '20180130'
+//    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 }
