--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'io.planex.mvp'
-version '1.0-SNAPSHOT'
+version '0.0.1'
 
 apply plugin: 'java'
 apply plugin: 'idea'
@@ -15,4 +15,19 @@ dependencies {
     compile group: 'io.netty', name: 'netty-all', version: '4.1.22.Final'
     compile group: 'org.json', name: 'json', version: '20180130'
 //    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+}
+
+jar {
+    baseName = 'engine'
+    version =  '0.0.1'
+    manifest {
+        attributes "Main-Class": "io.planex.mvp.ledger.Main"
+    }
+
+    from(configurations.compile.collect { it.isDirectory() ? it : project.zipTree(it) }) {
+        exclude '**/META-INF/services/**'
+        exclude '**/META-INF/*.SF'
+        exclude '**/META-INF/*.DSA'
+        exclude '**/META-INF/*.RSA'
+    }
 }
